--- a/front/website/src/components/layout/Navbar.astro
+++ b/front/website/src/components/layout/Navbar.astro
@@ -21,7 +21,7 @@
     <div
       class="flex justify-center flex-wrap gap-8 text-2xl font-light text-center"
     >
-      <a href="/" class="hover:text-[#e9d8a6] transition-colors">Inicio</a>
+      <a href="/inicio" class="hover:text-[#e9d8a6] transition-colors">Inicio</a>
       <a
         href="https://images-cam93.s3.us-east-1.amazonaws.com/Menu+la+bella++(1).pdf"
         target="_blank"
