--- a/front/website/src/pages/inicio.astro
+++ b/front/website/src/pages/inicio.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Hero from '../components/layout/Hero.astro';
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/layout/Hero.astro";
 ---
 
 <Layout>
   <Hero />
-</Layout> 
+</Layout>
